[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npi-gnfc"
version = "0.1.0"
description = "PyTorch reference implementation of NPI+GNFC for EEG-to-text neural-field modeling"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "numpy>=1.23",
    "scipy>=1.9",
    "pyyaml>=6.0",
    "tqdm>=4.64",
]

[tool.setuptools.packages.find]
where = ["src"]
